--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
     "postinstall": "npx prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.0",
+    "@prisma/client": "^7.1.0",
     "bcryptjs": "^3.0.3",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.553.0",
-    "next": "16.0.1",
+    "dotenv": "^17.2.3",
+    "lucide-react": "^0.556.0",
+    "next": "16.0.8",
     "next-auth": "^4.24.13",
-    "nodemailer": "^7.0.10",
+    "nodemailer": "^7.0.11",
     "radix-ui": "^1.4.3",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hot-toast": "^2.6.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.17",
-    "zod": "^4.1.12"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -35,18 +36,18 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^24",
-    "@types/nodemailer": "^7.0.3",
-    "@types/react": "19.2.3",
+    "@types/nodemailer": "^7.0.4",
+    "@types/react": "19.2.7",
     "@types/react-dom": "^19.2.3",
     "beasties": "0.3.5",
     "eslint": "9.39.1",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "16.0.8",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "openapi-typescript-codegen": "^0.29.0",
     "typescript": "^5"
   },
   "engines": {
-    "node": ">=18.18.0"
+    "node": "^20.19 || ^22.12 || >=24.0"
   }
 }
