--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "informejo",
   "description": "Informejo is a platform for creating and managing IT support tickets",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "private": true,
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "lint": "next lint",
-    "postinstall": "npx prisma generate"
+    "postinstall": "npx prisma generate",
+    "version-major": "npm version major",
+    "version-minor": "npm version minor",
+    "version-patch": "npm version patch"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.1.0",
